--- a/package.json
+++ b/package.json
@@ -46,7 +46,11 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
-    "prettier": "^2.0.5"
+    "autoprefixer": "^10.4.14",
+    "gatsby-plugin-postcss": "^6.11.0",
+    "postcss": "^8.4.25",
+    "prettier": "^2.0.5",
+    "tailwindcss": "^3.3.2"
   },
   "engines": {
     "node": ">= 14.15.0"
