--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "gatsby-plugin-image": "^3.11.0",
     "gatsby-plugin-netlify": "^5.0.0",
     "gatsby-plugin-netlify-cms": "^7.11.0",
+    "gatsby-plugin-next-seo": "^1.11.0",
     "gatsby-plugin-purgecss": "^6.0.0",
     "gatsby-plugin-react-helmet": "^6.11.0",
     "gatsby-plugin-sass": "^6.11.0",
@@ -28,6 +29,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.0.0",
+    "react-helmet-async": "^1.3.0",
     "sass": "^1.64.1",
     "uuid": "^9.0.0"
   },
