--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "bulma": "^0.9.0",
     "gatsby": "^5.11.0",
+    "gatsby-cli": "^5.13.3",
     "gatsby-plugin-image": "^3.11.0",
     "gatsby-plugin-netlify": "^5.0.0",
     "gatsby-plugin-netlify-cms": "^7.11.0",
