--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "1.1.3",
   "author": "Austin Green",
   "dependencies": {
+    "18": "^0.0.0",
     "bulma": "^0.9.0",
     "gatsby": "^5.11.0",
     "gatsby-cli": "^5.13.3",
@@ -26,6 +27,7 @@
     "netlify-cms-app": "^2.15.72",
     "netlify-cms-media-library-cloudinary": "^1.3.10",
     "netlify-cms-media-library-uploadcare": "^0.5.10",
+    "nvm": "^0.0.4",
     "prop-types": "^15.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
